src/App.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap");

:root {
	--nav-hvr: #fe696a;
	--mid-pink: #fa4d4d;
	--deep-hvr: #fe3638;
	--mild-gry: #48566b;
	--mdl-hdr: #4b566b;
	--mdl-lbl: #373f50;
	--section-bg: rgba(112, 120, 138, 0.123) 0;
	--sht-trans: all 0.2s ease-in-out;
	--card-border: 1px solid rgba(0, 0, 0, 0.125);
	--card-radius: 0.25rem;
}

* {
	margin: 0;
	padding: 0;
}

.flexed {
	display: flex;
	justify-content: center;
	align-items: center;
}

.flex-col {
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.underline {
	width: 50%;
	height: 0.25rem;
	margin: 0.6rem auto;
	background: var(--nav-hvr);
}

